# wirechat-sdk

./: SDK.v1.md  create-tag.sh
wirechat-sdk-c/: .gitignore  CMakeLists.txt
wirechat-sdk-c/examples/: hello.c  join_chat.c
wirechat-sdk-c/src/: jsmn.h  wirechat.c  wirechat.h
wirechat-sdk-go/: Makefile  README.md  TAGGING.md  go.mod
wirechat-sdk-go/examples/: README.md
wirechat-sdk-go/examples/hello/: README.md  main.go
wirechat-sdk-go/examples/join-chat/: README.md  main.go
wirechat-sdk-go/examples/rest-demo/: README.md  main.go
wirechat-sdk-go/examples/test-history/: README.md  main.go
wirechat-sdk-go/examples/test-reconnect/: README.md  main.go
wirechat-sdk-go/wirechat/: client.go  client_test.go  config.go  dispatcher.go  errors.go  events.go  logger.go  state.go  types.go
wirechat-sdk-go/wirechat/internal/: conn.go
wirechat-sdk-go/wirechat/rest/: client.go  types.go
wirechat-sdk-python/: main.py  pyproject.toml
wirechat-sdk-python/examples/hello/: main.py
wirechat-sdk-python/examples/join_chat/: main.py
wirechat-sdk-python/src/wirechat/: __init__.py  client.py  errors.py  types.py
wirechat-sdk-python/src/wirechat_sdk_python/: __init__.py
wirechat-sdk-rust/: Cargo.toml
wirechat-sdk-rust/examples/hello/: main.rs
wirechat-sdk-rust/examples/join_chat/: main.rs
wirechat-sdk-rust/src/: client.rs  config.rs  error.rs  event.rs  lib.rs
