[package]
name = "wirechat-sdk-rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "wirechat_rs"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.95"
futures-util = "0.3.31"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tokio-tungstenite = "0.28.0"
